# aby-java

./: .dockerignore  .editorconfig  .gitignore  ABY.cmake  ABY.conanfile.txt  ABY.i  ABY.patch  CMakeLists.txt  Debian.dockerfile  Dockerfile  LICENSE  Makefile  README.md  Ubuntu.dockerfile  aby.i  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: continuous-integration.yaml  gradle-wrapper-validation.yaml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: DownloadLibraryTask.kt  Library.kt  PatchTask.kt  SwigLibraryTask.kt
buildSrc/src/main/kotlin/edu/cornell/cs/apl/nativetools/: CollectLibraryTask.kt  DockerCopy.kt  DockerCopyTask.kt  DockerSwigLibraryTask.kt  DownloadJNITask.kt  DownloadLibraryTask.kt  Library.kt  MakefileBuilder.kt  PatchTask.kt  SwigLibraryPlugin.kt  SwigLibraryPluginExtension.kt  SwigLibraryTask.kt  Utility.kt
buildSrc/src/main/kotlin/edu/cornell/cs/apl/nativetools/templates/: BuildMakefile.kt  CMakeLists.kt  DependenciesMakefile.kt  Dockerfile.kt  Dockerignore.kt  GetMakefile.kt  LibraryConstants.kt  Platform.kt  SwigMakefile.kt  Template.kt
buildSrc/src/main/kotlin/io.github.apl_cornell/nativetools/: CollectLibraryTask.kt  DockerCopy.kt  DockerCopyTask.kt  DownloadJNITask.kt  Library.kt  SwigLibraryPlugin.kt  SwigLibraryPluginExtension.kt  Utility.kt
buildSrc/src/main/kotlin/io.github.apl_cornell/nativetools/templates/: BuildMakefile.kt  CMakeLists.kt  DependenciesMakefile.kt  Dockerfile.kt  Dockerignore.kt  GetMakefile.kt  LibraryConstants.kt  Platform.kt  SwigMakefile.kt  Template.kt
buildSrc/src/main/resources/edu/cornell/cs/apl/nativetools/: Dockerfile  build.mk
buildSrc/src/main/resources/edu/cornell/cs/apl/nativetools/profiles/: conan.x86_64-apple-darwin14  conan.x86_64-apple-darwin18  x86_64-apple-darwin.cmake  x86_64-apple-darwin.conan
buildSrc/src/main/resources/io/github/apl_cornell/nativetools/profiles/: x86_64-apple-darwin.conan
conan/: .gitignore
conan/aby/: conanfile.py
conan/aby-java/: conanfile.py
conan/aby-java/src/: CMakeLists.txt  wrapper.cpp
conan/aby/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
conan/encrypto_utils/: conanfile.py
conan/encrypto_utils/test_package/: test_package.cpp
conan/jni/: conanfile.py
conan/relic/: conanfile.py
nix/: default.nix
nix/aby/: default.nix
nix/aby-java/: default.nix
nix/aby-java/src/: CMakeLists.txt
nix/jni/: default.nix
scripts/: build_aby.sh  build_java_wrapper.sh  docker_copy.sh  generate_java_interface.sh  generate_linux_binary.sh  get_aby.sh  link_java_wrapper.sh  patch_aby.sh  variables.sh
src/main/c/: aby_wrap.cpp
src/main/cpp/: aby_wrap.cpp
src/main/java/de/tu_darmstadt/cs/encrypto/aby/: ABY.java  ABYParty.java  Aby.java  AbyJNI.java  Circuit.java  CircuitType.java  MultiplicationTripleGenerationAlgorithm.java  Phase.java  Role.java  SWIGTYPE_p_f_p_GATE_p_void__void.java  SWIGTYPE_p_gate_specific.java  SWIGTYPE_p_p_unsigned_int.java  SWIGTYPE_p_p_unsigned_long_long.java  SWIGTYPE_p_std__dequeT_unsigned_int_t.java  SWIGTYPE_p_std__vectorT_unsigned_int_t.java  SWIGTYPE_p_unsigned_char.java  SWIGTYPE_p_unsigned_int.java  SWIGTYPE_p_unsigned_long_long.java  SWIGTYPE_p_unsigned_short.java  SWIGTYPE_p_void.java  SecurityLevel.java  Share.java  SharingType.java  UInt32Vector.java
src/main/resources/natives/osx_64/: libabyjava.dylib
src/test/java/com/github/apl_cornell/aby/: AbyRunner.java  AbyTest.java  BinaryGate.java  CircuitBuilder.java
src/test/java/de/tu_darmstadt/cs/encrypto/aby/: ABYTest.java  AbyRunner.java  AbyTest.java  BinaryGate.java  CircuitBuilder.java
src/test/java/io/github/apl_cornell/aby/: AbyRunner.java  AbyTest.java  BinaryGate.java  CircuitBuilder.java
